# ml

./: README.md  pyproject.toml
ml30/img/processor/: filter.py  utils.py
ml30/ml-ng/C1/W1/: numpy-ref.ipynb
ml30/ml-ng/C1/W2/: feature_eng_poly_reg.ipynb  movies_linear_reg.ipynb  multiple_lin_reg_ng.ipynb
ml30/ml-ng/C1/W3/: logistic_regression.ipynb  regularization.ipynb
ml30/ml-ng/C1/W3/.ipynb_checkpoints/: logistic_regression-checkpoint.ipynb
ml30/ml-ng/C2/W1/: coffee_roasting.ipynb  neurons_layers.ipynb
ml30/ml-ng/W1/: hw_ml.ipynb  linear_reg.ipynb
ml30/ml-ng/W2/: multiple_linear_reg.ipynb
