[tool.poetry]
name = "ml30"
version = "0.1.1"
description = ""
authors = ["ean <eanups@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
pandas = "^1.3.1"
jupyterlab = "^3.1.1"
kaggle = "^1.5.12"
scikit-learn = "^0.24.2"
xgboost = "^1.4.2"
seaborn = "^0.11.2"
category-encoders = "^2.2.2"
tensorflow = "^2.6.0"
pyarrow = "^5.0.0"
opencv-contrib-python = "^4.5.5"
scikit-surprise = "^1.1.1"
matplotlib = "^3.5.2"
ipympl = "^0.9.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
